# lefthook

./: .gitignore  .golangci.yml  .goreleaser.yml  .lefthook.toml  .lefthook.yml  .npmignore  .tool-versions  .travis.yml  .typos.toml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Gemfile  Makefile  NODE.md  README.md  SECURITY.md  book.toml  cliff.toml  docmd.config.js  go.mod  go.sum  index.html  install.html  integration_test.go  integrity_test.go  intro.html  lefthook.yml  llms-full.txt  llms.json  llms.txt  main.go  package.json  print.html  robots.txt  schema.json  search-index.json  (+8 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  hooks.json
.npm/: README.md  get-exe.js  install.js  package.json  postinstall.js
.rubygems/: README.md  lefthook.gemspec
cmd/: add-doc.txt  add-usage.txt  add.go  app.go  autocomplete.go  check_install.go  cmd_test.go  commands.go  commands_no_self_update.go  commands_no_upgrade.go  commands_without_self_update.go  dump.go  install.go  json_schema.go  lefthook.go  root.go  root_test.go  run.go  run_command.go  run_command_windows.go  run_test.go  run_windows.go  self_update.go  spinner.go  templates.go  uninstall.go  upgrade.go  validate.go  version.go  version_test.go
configuration/: Commands.html  Hook.html  Scripts.html  args.html  assert_lefthook_installed.html  colors.html  configs.html  env.html  exclude.html  exclude_tags.html  extends.html  fail_on_changes.html  fail_text.html  (+41 more)
packaging/pypi/: README.md  hatch_build.py  pyproject.toml  setup.py
packaging/pypi/lefthook/: main.py
(+917 files in other folders)
