[project]
name = "lefthook"
version = "2.0.8"
description = "Git hooks manager. Fast, powerful, simple."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Evil Martians", email = "lefthook@evilmartians.com"}
]
requires-python = ">=3.6"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/evilmartians/lefthook"

[project.scripts]
lefthook = "lefthook.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lefthook"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "lefthook/",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true
